tests/baselines/reference/project/relativeGlobal/amd/relativeGlobal.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== decl.ts (0 errors) ====
    export function call() {
        return "success";    
    }
    export var x = 1;
==== consume.ts (0 errors) ====
    import decl = require("./decl");
    var str = decl.call();
    
    declare function fail();
    
    if(str !== "success") {
        fail();
    }